# tutorials

modules/dynunet_pipeline/: create_dataset.py  create_network.py  inference.py  inferrer.py  install_requirements.sh  train.py  trainer.py  transforms.py
modules/dynunet_pipeline/commands/task04/: infer.sh  train.sh
modules/dynunet_pipeline/commands/task2120/: create_datalist.sh  infer.sh  infer_with_docker.py  infer_with_docker_with_affine.py  train.sh
modules/dynunet_pipeline/commands/task2121/: infer.sh  train.sh
modules/dynunet_pipeline/commands/task2123/: infer.sh  train.sh
modules/dynunet_pipeline/commands/task2124/: infer.sh  train.sh
modules/dynunet_pipeline/data/: .gitignore
modules/dynunet_pipeline/data/config/: dataset_task2120.json  dataset_task2121.json  dataset_task2123.json  (+2 more)
modules/dynunet_pipeline/docker/: Dockerfile
modules/dynunet_pipeline/dynunet_pipeline/: create_dataset.py  create_network.py  evaluator.py  inference.py  inferrer.py  task_params.py  train.py  trainer.py  transforms.py
modules/dynunet_pipeline/extensions/FastParcellation/: CMakeLists.txt
modules/dynunet_pipeline/extensions/FastParcellation/Full_Brain_Parcellation/: CMakeLists.txt  Full_Brain_Parcellation.py
modules/dynunet_pipeline/extensions/FastParcellation/Full_Brain_Parcellation/Resources/UI/: Full_Brain_Parcellation.ui
modules/dynunet_pipeline/extensions/FastParcellation/Full_Brain_Parcellation/Testing/example_data/T1/: leadppmila_0412420130410_0000.nrrd
modules/dynunet_pipeline/extensions/FastParcellation/run_command/: CMakeLists.txt  run_command.py
(+9 files in other folders)
